Update and rename heaven_home_popup.html to index.html

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                     target: "target-chat-id",
                     apiKey: "196962f3-36e4-433e-b68e-72bcc0c49344",
                     productId: "random-id",
-                    chatBotType: "SalesConcierge",
-                    // listingId: "<listingId>",
+                    chatBotType: "LeaseConcierge",
+                    //listingId: "<listingId>"
                   });
                    window.onload = function() {assistant.init();}
                 }
